--- a/css/main.css
+++ b/css/main.css
@@ -26,49 +26,51 @@ h1 {position: relative;}
 
 /* main */
 h2 {margin-bottom: 26px;font-size: 60px;font-weight: 600;}
-h3 {margin-top: 50px;border: 1px solid #000;margin: 0 20px;}
-
+h3 {margin-top: 50px;margin: 0 20px;}
 
 /* welcome */
 .welcome_txt,.scroll {text-align: center;}
 .welcome_txt img {width: 250px;margin-top: 160px;}
 .scroll {margin-top: 320px;}
 
-
 /* left box */
 .box .left h3 {float: left;position: relative;}
 .box .left h3:after {content: "";display: block;width: 3px;height: 280px;background: #333;position: absolute;right: 50px;top: 120px;}
 .box .left li:nth-child(2) {margin-bottom: 20px;}
 
-
 .box .color_box1 {width: 900px;height: 150px;background: #ffd000;position: absolute;top: 440px;left: 0;z-index: -1;}
 .box .color_box3 {width: 900px;height: 150px;background: rgb(250, 155, 231);position: absolute;top: 440px;left: 0;z-index: -1;}
 .box .color_box5 {width: 900px;height: 150px;background: rgb(155, 250, 164);position: absolute;top: 440px;left: 0;z-index: -1;}
 
-/* right box */
+.left a {display: inline-block;padding: 10px 15px;margin-left: 770px;color: darkgray;border: 1px solid rgb(255, 0, 0);border-radius: 5px;}
+.left a:hover {color: #333;border: 1px solid #333;}
 
+
+/* right box */
 .box .right h3 {float: right;position: relative;}
 .box .right h3:after {content: "";display: block;width: 3px;height: 280px;background: #333;position: absolute;left: 50px;top: 120px;}
 
-.box .right ul {float: right;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
+.box .right ul {float: right;margin-right: 10px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
 .box .right li:nth-child(2) {margin-bottom: 20px;}
-
 
 .box .color_box2 {width: 900px;height: 150px;background: rgb(119, 178, 255);position: absolute;top: 440px;right: 0;z-index: -1;}
 .box .color_box4 {width: 900px;height: 150px;background: rgb(250, 179, 155);position: absolute;top: 440px;right: 0;z-index: -1;}
 .box .color_box6 {width: 900px;height: 150px;background: rgb(213, 155, 250);position: absolute;top: 440px;right: 0;z-index: -1;}
 
+.right a {display: inline-block;padding: 10px 15px;margin-left: 680px;color: darkgray;border: 1px solid darkgray;border-radius: 5px;}
+.right a:hover {color: #333;border: 1px solid #333;}
+
+
 /* about */
 #about {position: relative;}
-#about img {border: 1px solid red;}
-#about ul {border: 1px solid #000;float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
-
+#about img {}
+#about ul {float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
 
 /* skill */
 #skill {position: relative;}
-#skill .skills_box ul {float: left;width: 40%;margin-right: 130px;background: gold;}
+#skill .skills_box ul {float: left;width: 40%;margin-right: 130px;}
 
-.progress_wrap {float: right;padding: 40px;width: 400px;height: 400px;background: #e9e6e6;box-sizing: border-box;}
+.progress_wrap {float: right;padding: 40px;width: 400px;height: 400px;background: #e9e6e6;box-sizing: border-box;;border: 1px solid #000;}
 .icons {float: left;line-height: 1.3;}
 .icons img {display: block;margin-bottom: 5px;}
 .progressbar_wrap {float: left;width: calc(100% - 70px);margin-left: 20px;}
@@ -78,30 +80,30 @@ h3 {margin-top: 50px;border: 1px solid #000;margin: 0 20px;}
 .progressbar .proggress {height: 100% !important;}
 .percentCount {display: none;}
 
-
 /* work1 */
 #work1 {position: relative;}
-#work1 img {float: left;border: 1px solid red;}
-#work1 ul {border: 1px solid #000;float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
-.work1_box a {border: 1px solid #000;padding: 10px;float: right;}
+#work1 .work1_box ul {float: right;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#work1 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
+#work1 img {float: left;width: 400px;height: auto;}
 
 /* work2 */
 #work2 {position: relative;}
-#work2 img {float: right;border: 1px solid rgb(0, 255, 128);}
-#work2 ul {border: 1px solid #000;float: left;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
+#work2 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
+#work2 img {float: right;width: 400px;height: auto;}
+#work2 ul {float: left;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
 
 /* work3 */
 #work3 {position: relative;}
-#work3 img {float: left;border: 1px solid red;}
-#work3 ul {border: 1px solid #000;float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#work3 .work3_box ul {float: right;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#work3 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
+#work3 img {float: left;width: 400px;height: auto;}
+#work3 ul {float: right;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
 
 /* work4 */
 #work4 {position: relative;}
-#work4 img {float: right;border: 1px solid red;}
-#work4 ul {border: 1px solid #000;float: left;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
-
-
-
+#work4 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
+#work4 img {float: right;width: 400px;height: auto;border: 1px solid #000;}
+#work4 ul {float: left;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
 
 /* footer */
 footer {text-align: center;margin-bottom: 50px;line-height: 1.6;}
