--- a/css/main.css
+++ b/css/main.css
@@ -42,9 +42,6 @@ h3 {margin-top: 50px;margin: 0 20px;}
 .box .color_box3 {width: 900px;height: 150px;background: rgb(250, 155, 231);position: absolute;top: 440px;left: 0;z-index: -1;}
 .box .color_box5 {width: 900px;height: 150px;background: rgb(155, 250, 164);position: absolute;top: 440px;left: 0;z-index: -1;}
 
-.left a {display: inline-block;padding: 10px 15px;margin-left: 770px;color: darkgray;border: 1px solid rgb(255, 0, 0);border-radius: 5px;}
-.left a:hover {color: #333;border: 1px solid #333;}
-
 
 /* right box */
 .box .right h3 {float: right;position: relative;}
@@ -57,8 +54,12 @@ h3 {margin-top: 50px;margin: 0 20px;}
 .box .color_box4 {width: 900px;height: 150px;background: rgb(250, 179, 155);position: absolute;top: 440px;right: 0;z-index: -1;}
 .box .color_box6 {width: 900px;height: 150px;background: rgb(213, 155, 250);position: absolute;top: 440px;right: 0;z-index: -1;}
 
-.right a {display: inline-block;padding: 10px 15px;margin-left: 680px;color: darkgray;border: 1px solid darkgray;border-radius: 5px;}
-.right a:hover {color: #333;border: 1px solid #333;}
+
+.box .left a {float: left;margin-left: 750px; padding: 10px 15px;color: darkgray;border: 1px solid darkgray;border-radius: 5px;}
+.box .left a:hover {color: #333;border: 1px solid #333;}
+
+.box .right a {float: left;margin-left: 490px;padding: 10px 15px;color: darkgray;border: 1px solid darkgray;border-radius: 5px;}
+.box .right a:hover {color: #333;border: 1px solid #333;}
 
 
 /* about */
@@ -67,10 +68,10 @@ h3 {margin-top: 50px;margin: 0 20px;}
 #about ul {float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
 
 /* skill */
-#skill {position: relative;}
+#skill {position: relative;;}
 #skill .skills_box ul {float: left;width: 40%;margin-right: 130px;}
 
-.progress_wrap {float: right;padding: 40px;width: 400px;height: 400px;background: #e9e6e6;box-sizing: border-box;;border: 1px solid #000;}
+.progress_wrap {float: right;padding: 40px;width: 400px;height: 400px;background: #e9e6e6;box-sizing: border-box;}
 .icons {float: left;line-height: 1.3;}
 .icons img {display: block;margin-bottom: 5px;}
 .progressbar_wrap {float: left;width: calc(100% - 70px);margin-left: 20px;}
@@ -90,7 +91,7 @@ h3 {margin-top: 50px;margin: 0 20px;}
 #work2 {position: relative;}
 #work2 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
 #work2 img {float: right;width: 400px;height: auto;}
-#work2 ul {float: left;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#work2 ul {float: left;width: 40%;margin-right: 320px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
 
 /* work3 */
 #work3 {position: relative;}
@@ -102,8 +103,8 @@ h3 {margin-top: 50px;margin: 0 20px;}
 /* work4 */
 #work4 {position: relative;}
 #work4 .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
-#work4 img {float: right;width: 400px;height: auto;border: 1px solid #000;}
-#work4 ul {float: left;width: 40%;margin-right: 150px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#work4 img {float: right;width: 400px;height: auto;}
+#work4 ul {float: left;width: 40%;margin-right: 320px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: right;}
 
 /* footer */
 footer {text-align: center;margin-bottom: 50px;line-height: 1.6;}
