--- a/css/main.css
+++ b/css/main.css
@@ -64,8 +64,9 @@ h3 {margin-top: 50px;margin: 0 20px;}
 
 /* about */
 #about {position: relative;}
-#about img {}
 #about ul {float: right;width: 40%;margin-right: 130px;margin-top: 50px;font-size: 20px;line-height: 1.4;color: darkgray;text-align: left;}
+#about .img {display: inline-block;width: 400px;height: 400px;overflow: hidden;}
+#about img {float: left;width: 400px;height: auto;}
 
 /* skill */
 #skill {position: relative;;}
